--- a/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.html
+++ b/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.html
@@ -1,28 +1,29 @@
 <div class="title">
   <h1>Fashion Hunter</h1>
 </div>
-<form class="container">
+<form class="container" [formGroup]="crearCuentaForm">
   <div class="subtitle">
     <h2>Crear cuenta</h2>
     <div>
-      <img src="assets/images/avatar/Marina.png" alt="" />
+      <img src="assets/images/avatar/Marina.png" alt="" (click)="fileUpload.click()" />
     </div>
   </div>
   <div class="flex-container">
     <div class="flex-item">
       <h3>Datos Personales</h3>
       <div class="line-right">
-        <input type="text" placeholder="Nombre" autocomplete="off" />
+        <input formControlName="firstName" type="text" placeholder="Nombre" autocomplete="off" />
         <br />
-        <input type="text" placeholder="Apellido" autocomplete="off" />
+        <input formControlName="lastName" type="text" placeholder="Apellido" autocomplete="off" />
         <br />
-        <input type="text" placeholder="Usuario" autocomplete="off" />
+        <input formControlName="username" type="text" placeholder="Usuario" autocomplete="off" />
         <br />
-        <input type="email" placeholder="Email" autocomplete="off" />
+        <input formControlName="email" type="email" placeholder="Email" autocomplete="off" />
         <br />
-        <input type="password" placeholder="Contraseña" autocomplete="off" />
+        <input formControlName="password" type="password" placeholder="Contraseña" autocomplete="off" />
         <br />
         <input
+          formControlName="passwordConfirm"
           type="password"
           placeholder="Confirmar contraseña"
           autocomplete="off"
@@ -75,14 +76,17 @@
           </div>
         </div>
         <div class="upload-photo">
-          <button>
-            <i class="fa-solid fa-arrow-up-from-bracket fa-lg"></i>Subir archivo
+          <input type="file" class="file-input"
+       (change)="onFileSelected($event)" #fileUpload>
+          <button (click)="fileUpload.click()">
+            <i class="fa-solid fa-arrow-up-from-bracket fa-lg"></i>
+            Subir archivo
           </button>
         </div>
       </div>
     </div>
     <div class="flex-item go">
-      <button>Vamos allá!</button>
+      <button (click)="crearCuenta()">Vamos allá!</button>
     </div>
   </div>
 </form>
