--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -27,15 +27,14 @@
 
             <div class="container">
                 <form class="form" method="post">
-                    <input type="text" #username name="username" placeholder="Nombre de Usuario" required>
+                    <input type="text" [(ngModel)]="user.username" name="username" placeholder="Nombre de Usuario" required>
                     <br>
-                    <input type="password" #password name="password" placeholder="Password" required>
+                    <input type="password" [(ngModel)]="user.password" name="password" placeholder="Password" required>
                     <br>
-                    <h4>¿Olvidaste tu contraseña? <button (click)="onReset()">Click aquí</button></h4>
                     <button class="btn btn-success" type="submit" id="login-button" (click)="login()">Iniciar
                         Sesión</button>
                 </form>
-
+                <h4>¿Olvidaste tu contraseña? <a [routerLink]="['/forget-password']">Click aquí</a></h4>
                 <h4>¿No tenés cuenta? <a href="#">Crear cuenta</a></h4>
                     <img src="../../../assets/images/googlePlay.png" id="google">
                     <img src="../../../assets/images/appleStore.png" id="apple">
