--- a/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.scss
+++ b/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.scss
@@ -136,7 +136,7 @@ input {
   width: 80px;
   height: 80px;
   object-fit: cover;
-  border: 2px solid var(--primary-color);
+  // border: 2px solid var(--primary-color);
   border-radius: 100%;
   cursor: pointer;
 }
