--- a/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.scss
+++ b/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.scss
@@ -126,20 +126,38 @@ input {
   align-items: center;
   align-content: space-between;
 }
-.profile-photos .flex-item {
+/* .profile-photos .flex-item {
   width: 88px;
   height: 88px;
   margin: 10px;
   padding: 10px;
+} */
+// -->
+.profile-photos .flex-item {
+  width: 200px;
+  height: 200px;
+  margin: 10px;
+  padding: 10px;
 }
-.profile-photos .flex-item img {
+// <--
+/* .profile-photos .flex-item img {
   width: 80px;
   height: 80px;
   object-fit: cover;
   // border: 2px solid var(--primary-color);
   border-radius: 100%;
   cursor: pointer;
+} */
+// -->
+.profile-photos .flex-item img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border: 2px solid var(--primary-color);
+  border-radius: 100%;
+  cursor: pointer;
 }
+// <--
 .photo-selection {
   width: 75%;
   margin: auto;
