--- a/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.html
+++ b/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.html
@@ -5,7 +5,7 @@
   <div class="subtitle">
     <h2>Crear cuenta</h2>
     <div>
-      <img src="assets/images/avatar/Marina.png" alt="" (click)="fileUpload.click()" />
+      <img [src]="previsualizacion" alt="" (click)="fileUpload.click()" />
     </div>
   </div>
   <div class="flex-container">
