--- a/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.css
+++ b/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.css
@@ -1,4 +1,4 @@
-// Header
+/* // Header */
 .title {
   position: fixed;
   top: 0px;
@@ -132,14 +132,14 @@ input {
   margin: 10px;
   padding: 10px;
 } */
-// -->
+/* // --> */
 .profile-photos .flex-item {
   width: 200px;
   height: 200px;
   margin: 10px;
   padding: 10px;
 }
-// <--
+/* // <-- */
 /* .profile-photos .flex-item img {
   width: 80px;
   height: 80px;
@@ -148,7 +148,7 @@ input {
   border-radius: 100%;
   cursor: pointer;
 } */
-// -->
+/* // --> */
 .profile-photos .flex-item img {
   width: 200px;
   height: 200px;
@@ -157,7 +157,7 @@ input {
   border-radius: 100%;
   cursor: pointer;
 }
-// <--
+/* // <-- */
 .photo-selection {
   width: 75%;
   margin: auto;
