--- a/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.css
+++ b/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.css
@@ -154,6 +154,7 @@ input {
   height: 200px;
   object-fit: cover;
   border: 2px solid var(--primary-color);
+  padding: 2px;
   border-radius: 100%;
   cursor: pointer;
 }
