Añadidos algunos feedbacks para el user

--- a/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.css
+++ b/Frontend/src/app/components/crear-cuenta/crear-cuenta.component.css
@@ -190,6 +190,9 @@ i.fa-solid {
 .file-input {
   display: none;
 }
+.input-error {
+  color: red;
+}
 
 /* iPads, Tabletas y dispositivos móviles */
 @media all and (max-width: 768px) {
