--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="title">
   <h1>Fashion Hunter</h1>
   <div class="right">
-    <p>Marina <br /><small>Cerrar sesión</small></p>
+    <p>Marina <br /><small (click)="logOut()">Cerrar sesión</small></p>
     <img src="assets/images/avatar/Marina.png" class="img-rounded" alt="" />
   </div>
 </div>
