Implementado el maquetado de Guardadas

--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -65,7 +65,7 @@
 
 <!-- Accesos directos -->
 <div class="shortcuts">
-  <img src="assets/images/icons/Favorite.png" alt="">
+  <img src="assets/images/icons/Favorite.png" alt="" [routerLink]="['/guardadas']">
   <img src="assets/images/icons/Add_New.png" alt="" class="add-new-icon">
   <img src="assets/images/icons/chat.png" alt="">
 </div>
