--- a/Frontend/src/app/components/forget-password/forget-password.component.html
+++ b/Frontend/src/app/components/forget-password/forget-password.component.html
@@ -1,15 +1,18 @@
-<div class="confirm-email">
-    <h3>Tu email es: user email ?</h3>
-    <button (submit)="sendEmail()">SI</button> <button>NO</button>
-    <h2>Por favor verifica tu email</h2>
+<div class="encabezado">
+<h1>Fashion Hunter</h1>
+</div>
+<form [formGroup]="form" (submit)="sendEmail()">
+<div class="form-group">
+    <h3>Por favor ingresá tu email</h3>
+    <input formControlName="email" type="text" class="form-control" placeholder="ejemplo@gmail.com" required>
+    <button class="button">Cambiar contraseña</button>   
+</div>
+</form>
+
+<div class="send-email">
+    <h3>¡Listo! Revisa tu correo</h3>
+    <i class="far fa-check-circle"></i>
+    <p>Esta acción requiere una verificación de correo.
+     Por favor revisa tu buzón.</p>
 </div>
 
-<div class="new-password">
-    <form class="form" method="post">
-        <input type="password" name="new-password" placeholder="Nueva contraseña" required>
-        <br>
-        <input type="password" name="new-password" placeholder="Confirma tu contraseña" required>
-        <br>
-        <button class="btn btn-success" type="submit" id="login-button" [routerLink]="['/login']">Check</button>
-    </form>
-</div>
