Dialog en shared module

--- a/Frontend/src/app/modules/shared/dialog/dialog.component.css
+++ b/Frontend/src/app/modules/shared/dialog/dialog.component.css
@@ -13,4 +13,7 @@ body {
   margin: 30px;
   color: white;
   background: var(--secondary-color);
+  border-radius: 10px;
+  width: 10rem;
+  height: 2rem;
 }
