--- a/Frontend/src/app/components/pages/guardadas/guardadas.component.html
+++ b/Frontend/src/app/components/pages/guardadas/guardadas.component.html
@@ -9,7 +9,7 @@
 
 <div class="container">
   <!-- Back -->
-  <div class="back">
+  <div class="back" (click)="goHome()">
     <img src="assets/images/icons/left_arrow.png" alt="" /><span>Guardadas</span>
   </div>
 
