--- a/Frontend/src/app/components/pages/home/home.component.css
+++ b/Frontend/src/app/components/pages/home/home.component.css
@@ -1,63 +1,3 @@
-/* Header */
-.title {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 5rem;
-  background: linear-gradient(
-    to right,
-    var(--tertiary-color),
-    var(--other-color-1),
-    var(--secondary-color)
-  );
-  z-index: 1;
-}
-.right {
-  position: absolute;
-  right: 40px;
-  top: 1rem;
-  width: 150px;
-}
-.right p {
-  font-family: var(--secondary-font);
-  font-weight: bold;
-  color: var(--background-color);
-  margin-top: 10px;
-  margin-right: 4px;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  text-align: center;
-}
-.right small {
-  font-weight: lighter;
-  cursor: pointer;
-}
-.right img {
-  margin: 0px;
-  position: absolute;
-  right: 0px;
-  top: 0px;
-}
-.img-rounded {
-  width: 55px;
-  height: 55px;
-  border-radius: 100%;
-}
-h1 {
-  display: inline;
-  margin-top: 0px;
-  font-family: var(--primary-font);
-  font-style: normal;
-  font-weight: 400;
-  font-size: 38.88px;
-  line-height: 5rem;
-  color: var(--primary-color);
-  margin-left: 49.41px;
-}
-
-
 /* POSTS */
 .posts-container {
   position: relative;
@@ -79,6 +19,7 @@ h1 {
 }
 .post {
   display: flex;
+  position: relative;
 }
 .user {
   display: inline;
@@ -90,11 +31,20 @@ h1 {
   content: "@";
 }
 .elapsed {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  margin-right: 10px;
   flex-basis: 7rem;
   text-align: right;
 }
 .elapsed p {
   margin-top: 0px;
+}
+.img-rounded {
+  width: 55px;
+  height: 55px;
+  border-radius: 100%;
 }
 .post-image {
   display: block;
@@ -110,7 +60,8 @@ h1 {
 .arrow-up {
   margin-left: 2.5px;
 }
-.arrow-down, .chat-icon  {
+.arrow-down,
+.chat-icon {
   margin-left: 50px;
 }
 .favorites {
@@ -137,7 +88,7 @@ h1 {
   left: 52rem;
   top: 6.5rem;
 
-  border: 2px solid #AFA9A9;
+  border: 2px solid #afa9a9;
   box-sizing: border-box;
   border-radius: 10px;
 }
@@ -157,7 +108,7 @@ h1 {
   left: 50rem;
   top: 14.5rem;
   font-weight: bold;
-  border: 2px solid #AFA9A9;
+  border: 2px solid #afa9a9;
   box-sizing: border-box;
   border-radius: 10px;
 }
