Implementado el header component en guardadas

--- a/Frontend/src/app/components/pages/guardadas/guardadas.component.html
+++ b/Frontend/src/app/components/pages/guardadas/guardadas.component.html
@@ -1,11 +1,5 @@
 <!-- Header -->
-<div class="title">
-  <h1>Fashion Hunter</h1>
-  <div class="right">
-    <p>Marina <br /><small (click)="logOut()">Cerrar sesión</small></p>
-    <img src="assets/images/avatar/Marina.png" class="img-rounded" alt="" />
-  </div>
-</div>
+<app-header></app-header>
 
 <div class="container">
   <!-- Back -->
