CSS fix en login

--- a/Frontend/src/app/components/login/login.component.css
+++ b/Frontend/src/app/components/login/login.component.css
@@ -81,6 +81,7 @@ h1 {
   color: #7F1F71;
   font-size: 65px;
   font-family: "Pacifico";
+  font-weight: lighter;
   margin-bottom: 0;
   margin-top: 25px;
 }
