--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -27,9 +27,9 @@
 
           <div class="container">
               <form class="form" method="post">
-                  <input type="text" [(ngModel)]="user.username" name="username" placeholder="Nombre de Usuario" required>
+                  <input type="text" autocomplete="off" [(ngModel)]="user.username" name="username" placeholder="Nombre de Usuario" required>
                   <br>
-                  <input type="password" [(ngModel)]="user.password" name="password" placeholder="Password" required>
+                  <input type="password" autocomplete="off" [(ngModel)]="user.password" name="password" placeholder="Password" required>
                   <br>
                   <button class="btn btn-success" type="submit" id="login-button" (click)="login()">Iniciar
                       Sesión</button>
