--- a/Frontend/src/app/modules/shared/dialog1/dialog1.component.html
+++ b/Frontend/src/app/modules/shared/dialog1/dialog1.component.html
@@ -2,7 +2,7 @@
   <h3>¡Listo! Revisa tu correo</h3>
   <i class="far fa-check-circle"></i>
   <p class="message">
-    Esta acción requiere una verificación de correo. Por favor revisa tu buzón.
+    Esta acción requiere una verificación de correo. <br> Por favor revisa en tu buzón de recibidos o en spam.
   </p>
   <div mat-dialog-actions class="actions">
     <button mat-button mat-dialog-close>Aceptar</button>
