--- a/Frontend/src/app/components/pages/components/header/header.component.html
+++ b/Frontend/src/app/components/pages/components/header/header.component.html
@@ -2,7 +2,7 @@
 <div class="title">
   <h1 (click)="goHome()">Fashion Hunter</h1>
   <div class="right" *ngIf="user">
-    <p>{{ user[0].firstName }} <br /><small (click)="logOut()">Cerrar sesión</small></p>
-    <img [src]="user[0].img" class="img-rounded" alt="" />
+    <p>{{ user.firstName }} <br /><small (click)="logOut()">Cerrar sesión</small></p>
+    <img [src]="user.img" class="img-rounded" alt="" />
   </div>
 </div>
