--- a/Frontend/src/app/modules/shared/dialog1/dialog1.component.html
+++ b/Frontend/src/app/modules/shared/dialog1/dialog1.component.html
@@ -5,6 +5,6 @@
     Esta acción requiere una verificación de correo. <br> Por favor revisa en tu buzón de recibidos o en spam.
   </p>
   <div mat-dialog-actions class="actions">
-    <button mat-button mat-dialog-close>Aceptar</button>
+    <button mat-button mat-dialog-close (click)="goLogin()">Aceptar</button>
   </div>
 </div>
