--- a/Frontend/src/app/components/pages/home/home.component.html
+++ b/Frontend/src/app/components/pages/home/home.component.html
@@ -67,7 +67,7 @@
 <!-- Suggestions -->
 <div class="suggestions" *ngIf="suggestions.length">
   <p class="suggestions-title">Sugerencias para ti</p>
-  <div class="suggestion" *ngFor="let suggestion of suggestions | slice:suggestions.length - 5; let i = index">
+  <div class="suggestion" *ngFor="let suggestion of suggestions; let i = index">
     <img [src]="suggestion['img']" alt="Suggestion {{i + 1}}">
     <span class="suggestion-name">{{ suggestion['firstName'] }}&nbsp;{{ suggestion['lastName'] }}</span>
     <span class="follow">Seguir</span>
