--- a/Frontend/src/app/components/pages/mensajes/mensajes.component.html
+++ b/Frontend/src/app/components/pages/mensajes/mensajes.component.html
@@ -1,1 +1,105 @@
-<p>mensajes works!</p>
+<app-header></app-header>
+
+<!-- Messages -->
+<div class="container">
+  <!-- Back -->
+  <div class="back">
+    <img src="assets/images/icons/left_arrow.png" alt="" (click)="goHome()" /><span>Mensajes</span>
+  </div>
+
+  <!-- Messages container -->
+  <div class="messages-container">
+    <!-- Active messages -->
+    <div class="active-messages">
+      <!-- Active messages header -->
+      <div class="active-messages-header">
+        <span> Chats activos </span>
+        <img src="assets/images/icons/add_chat.png" alt="" />
+      </div>
+      <!-- Active messages item 1 -->
+      <div class="active-messages-item">
+        <img src="assets/images/avatar/joaquin.png" alt="" />
+        <div class="wrapper">
+          <span class="user-name">Joaquín Lewis</span>
+          <br />
+          <span><small>No a la chaqueta...</small></span>
+        </div>
+        <div class="connection-indicator unreaded"></div>
+      </div>
+
+      <!-- Active messages item 2 -->
+      <div class="active-messages-item">
+        <img src="assets/images/avatar/Camila.png" alt="" />
+        <div class="wrapper">
+          <span class="user-name">Camila Romib</span>
+          <br />
+          <span><small>Si! Ahí estaba, recién...</small></span>
+        </div>
+        <div class="connection-indicator active"></div>
+      </div>
+
+      <!-- Active messages item 3 -->
+      <div class="active-messages-item">
+        <img src="assets/images/avatar/pedro.png" alt="" />
+        <div class="wrapper">
+          <span class="user-name">Pedro Carres</span>
+          <br />
+          <span><small>No iré a ese evento...</small></span>
+        </div>
+        <div class="connection-indicator readed"></div>
+      </div>
+
+      <!-- Active messages item 4 -->
+      <div class="active-messages-item">
+        <img src="assets/images/avatar/lina.png" alt="" />
+        <div class="wrapper">
+          <span class="user-name">Lina Grante</span>
+          <br />
+          <span><small>El desfile era...</small></span>
+        </div>
+        <div class="connection-indicator readed"></div>
+      </div>
+    </div>
+
+    <div class="the-messages">
+      <div class="the-messages-header">
+        <div class="chat-user">
+          <img src="assets/images/avatar/Camila.png" alt="" />
+          <div class="user-information">
+            <span class="full-user-name">Camila Romib - </span
+            ><span class="username"><small>@cami_ro</small></span>
+          </div>
+        </div>
+      </div>
+      <div class="messages-box">
+        <div class="outcoming-messages">
+          <span class="message"> Preguntaste en Isadora? </span>
+          <img src="assets/images/avatar/Marina.png" alt="" />
+        </div>
+        <div class="incoming-messages">
+          <img src="assets/images/avatar/Camila.png" alt="" />
+          <span class="message"> Sí, y tampoco. </span>
+        </div>
+        <div class="outcoming-messages">
+          <span class="message"> Y en Lazaro? </span>
+          <img src="assets/images/avatar/Marina.png" alt="" />
+        </div>
+        <div class="incoming-messages">
+          <img src="assets/images/avatar/Camila.png" alt="" />
+          <span class="message">
+            Sí! ahí estaba recién vengo, ya la compré. <br />
+            Fue amor a primera vista! Gracias!
+          </span>
+        </div>
+        <div class="outcoming-messages">
+          <span class="message"> Ok... </span>
+          <img src="assets/images/avatar/Marina.png" alt="" />
+        </div>
+      </div>
+
+      <input type="text" placeholder="Escribe un mensaje" />
+      <img class="emoji-icon" src="assets/images/icons/emoji_smile.png" alt="" />
+      <img src="assets/images/icons/Paper_Plane.png" alt="" class="send-icon">
+    </div>
+  </div>
+</div>
