keydown.enter added to input for messages

--- a/Frontend/src/app/components/pages/mensajes/mensajes.component.html
+++ b/Frontend/src/app/components/pages/mensajes/mensajes.component.html
@@ -101,6 +101,7 @@
         placeholder="Escribe un mensaje"
         [(ngModel)]="message"
         #inputMessage
+        (keydown.enter)="sendMessage(inputMessage.value)"
       />
       <img
         class="emoji-icon"
