--- a/Frontend/css/reset-password.component.css
+++ b/Frontend/css/reset-password.component.css
@@ -27,18 +27,14 @@ h3 {
   text-align: center;
 }
 
-input {
+input{
   width: 20%;
   border: solid 1px #7F1F71;
   margin: 10px;
-  padding: 5px;
+  padding: 10px;
 }
 
-input placeholder {
-  color: #7F1F71;
-}
-
-#cambiar-password {
+#change-password {
   text-align: center;
   padding: 8px;
   padding-left: 25px;
