--- a/Frontend/src/app/components/reset-password/reset-password.component.html
+++ b/Frontend/src/app/components/reset-password/reset-password.component.html
@@ -1,14 +1,19 @@
 <div class="encabezado">
     <h1>Fashion Hunter</h1>
-    </div>
+</div>
 
 <div class="switch-password">
     <h3>Por favor ingresa tu nueva contraseña</h3>
-    <form class="form" method="post">
-        <input type="password" name="new-password" placeholder="Nueva contraseña" required>
+    <form #f="ngForm" (ngSubmit)="onReset()" class="switch-password form" method="post" novalidate>
+        <div class="form-group">
+        <input type="password" name="password" id="password" 
+         placeholder="Nueva contraseña" required>
         <br>
-        <input type="password" name="password-confirm" placeholder="Confirma tu contraseña" required>
+        <input type="password" name="confirmPassword" id="confirmPassword"
+         placeholder="Confirma tu contraseña" required>
         <br>
-        <button class="btn btn-success" type="submit" id="cambiar-password" (click)="onReset()">Cambiar</button>
+        <button class="btn btn-success" type="submit" [disabled]="!f.valid" id="change-password"
+         >Cambiar contraseña</button>
+        </div>
     </form>
 </div>
