crear change-passwordDto

--- a/Frontend/src/app/components/reset-password/reset-password.component.html
+++ b/Frontend/src/app/components/reset-password/reset-password.component.html
@@ -4,15 +4,15 @@
 
 <div class="switch-password">
     <h3>Por favor ingresa tu nueva contraseña</h3>
-    <form #f="ngForm" (ngSubmit)="onReset()" class="switch-password form" method="post" novalidate>
+    <form #f="ngForm" (ngSubmit)="onReset()" class="switch-password form" method="post">
         <div class="form-group">
         <input type="password" name="password" id="password" 
-         placeholder="Nueva contraseña" required>
+         placeholder="Nueva contraseña" [(ngModel)]="password" required>
         <br>
-        <input type="password" name="confirmPassword" id="confirmPassword"
-         placeholder="Confirma tu contraseña" required>
+        <input type="password" name="passwordConfirm" id="passwordComfirm"
+         placeholder="Confirma tu contraseña" [(ngModel)]="passwordConfirm" required>
         <br>
-        <button class="btn btn-success" type="submit" [disabled]="!f.valid" id="change-password"
+        <button class="btn btn-success" [disabled]="!f.valid" type="submit" id="change-password"
          >Cambiar contraseña</button>
         </div>
     </form>
