reset password success

--- a/Backend/emails/resetPassword.pug
+++ b/Backend/emails/resetPassword.pug
@@ -13,7 +13,7 @@ block emailContent
               tbody
                 tr
                   td
-                    a(href=`http://htmlemail.io//${token}`, target="_blank") Click here to reset!!
+                    a(href=`http://localhost:4200/reset-password/${token}`, target="_blank") Click here to reset!!
     p
       | Si tu no hiciste esta solicitud, por favor ignora este correo.
 
