improvements on reset password

--- a/Frontend/src/app/components/session/reset-password/reset-password.component.html
+++ b/Frontend/src/app/components/session/reset-password/reset-password.component.html
@@ -5,9 +5,9 @@
 <div class="switch-password">
     <h3>Por favor ingresa tu nueva contraseña</h3>
     <form class="form" method="post">
-        <input type="password" name="new-password" placeholder="Nueva contraseña" required>
+        <input [(ngModel)]="password" type="password" name="new-password" placeholder="Nueva contraseña" required>
         <br>
-        <input type="password" name="password-confirm" placeholder="Confirma tu contraseña" required>
+        <input [(ngModel)]="passwordConfirm" type="password" name="password-confirm" placeholder="Confirma tu contraseña" required>
         <br>
         <button class="btn btn-success" type="submit" id="cambiar-password" (click)="onReset()">Cambiar</button>
     </form>
