primer pantalla crear publicacion

--- a/Frontend/src/app/components/pages/home/home.component.html
+++ b/Frontend/src/app/components/pages/home/home.component.html
@@ -72,7 +72,7 @@
     alt=""
     [routerLink]="['/guardadas']"
   />
-  <img src="assets/images/icons/Add_New.png" alt="" class="add-new-icon" />
+  <img src="assets/images/icons/Add_New.png" alt="" class="add-new-icon" (click)="crearPublicacion()" />
   <img src="assets/images/icons/chat.png" alt="" [routerLink]="['/mensajes']" />
 </div>
 
