--- a/Frontend/src/app/components/pages/components/header/header.component.css
+++ b/Frontend/src/app/components/pages/components/header/header.component.css
@@ -1,4 +1,3 @@
-/* Header */
 .title {
   position: fixed;
   top: 0px;
@@ -24,11 +23,15 @@
   font-weight: bold;
   color: var(--background-color);
   margin-top: 10px;
-  margin-right: 4px;
-  position: absolute;
+  margin-right: 40px;
+  position: relative;
   top: 0px;
-  left: 0px;
-  text-align: center;
+  right: 65px;
+  text-align: right;
+  width: 150px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .right small {
   font-weight: lighter;
@@ -55,5 +58,7 @@ h1 {
   line-height: 5rem;
   color: var(--primary-color);
   margin-left: 49.41px;
+}
+.logo {
   cursor: pointer;
 }
