--- a/Frontend/src/app/components/pages/components/header/header.component.html
+++ b/Frontend/src/app/components/pages/components/header/header.component.html
@@ -1,6 +1,6 @@
 <!-- Header -->
 <div class="title">
-  <h1 (click)="goHome()">Fashion Hunter</h1>
+  <h1 (click)="goHome()" class="logo">Fashion Hunter</h1>
   <div class="right" *ngIf="user">
     <p>{{ user.firstName }} <br /><small (click)="logOut()">Cerrar sesión</small></p>
     <img [src]="user.img" class="img-rounded" alt="" />
