--- a/Frontend/src/app/components/pages/home/home.component.css
+++ b/Frontend/src/app/components/pages/home/home.component.css
@@ -19,7 +19,12 @@
 }
 .post {
   display: flex;
-  position: relative;
+}
+.img-rounded {
+  width: 55px;
+  height: 55px;
+  object-fit: cover;
+  margin-right: 5px;
 }
 .user {
   display: inline;
@@ -31,20 +36,11 @@
   content: "@";
 }
 .elapsed {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  margin-right: 10px;
   flex-basis: 7rem;
   text-align: right;
 }
 .elapsed p {
   margin-top: 0px;
-}
-.img-rounded {
-  width: 55px;
-  height: 55px;
-  border-radius: 100%;
 }
 .post-image {
   display: block;
@@ -85,7 +81,7 @@
   position: fixed;
   width: 15rem;
   height: 5.4rem;
-  left: 52rem;
+  left: 49rem;
   top: 6.5rem;
 
   border: 2px solid #afa9a9;
@@ -103,9 +99,9 @@
 /* suggestions */
 .suggestions {
   position: fixed;
-  width: 19rem;
+  width: fit-content;
   height: fit-content;
-  left: 50rem;
+  left: 49rem;
   top: 14.5rem;
   font-weight: bold;
   border: 2px solid #afa9a9;
@@ -119,9 +115,17 @@
   display: flex;
   flex-direction: row;
   align-content: center;
-  justify-content: space-around;
+  justify-content: flex-start;
   padding: 10px 12px;
   align-items: center;
+}
+.suggestion-name,
+.follow,
+.suggestion img {
+  margin: auto 10px;
+}
+.suggestion-name {
+  white-space: nowrap;
 }
 .follow {
   color: var(--primary-color);
